--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">AttendaceApp</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Attendace App</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_scan">ScanActivity</string>
+    <string name="title_activity_scan">Scan</string>
+    <string name="title_activity_login">Login</string>
 
 </resources>
