--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,8 @@
     <string name="title_activity_scan_qrcode">ScanQRCodeActivity</string>
     <string name="title_activity_scan_card">ScanCardActivity</string>
     <string name="title_activity_scan_voice">ScanVoiceActivity</string>
+    <string name="title_activity_scan_card_selection">ScanCardSelectionActivity</string>
+    <string name="title_activity_scan_card_batch">ScanCardBatchActivity</string>
+    <string name="title_activity_scan_card_single">ScanCardSingleActivity</string>
 
 </resources>
