--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,13 +12,17 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_user">UserActivity</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Smart Scan</string>
     <string name="title_activity_scan_qrcode">ScanQRCodeActivity</string>
     <string name="title_activity_scan_card">ScanCardActivity</string>
     <string name="title_activity_scan_voice">ScanVoiceActivity</string>
     <string name="title_activity_scan_card_selection">ScanCardSelectionActivity</string>
-    <string name="title_activity_scan_card_batch">ScanCardBatchActivity</string>
-    <string name="title_activity_scan_card_single">ScanCardSingleActivity</string>
-    <string name="title_activity_functional_main">FunctionalMainActivity</string>
+    <string name="title_activity_scan_card_batch">ScanCardBatch</string>
+    <string name="title_activity_scan_card_single">ScanCardSingle</string>
+    <string name="title_activity_functional_main">iPresence</string>
+    <string name="title_activity_my_profile">My Profile</string>
+    <string name="title_activity_about_ipresence">About IPresence</string>
+    <string name="title_activity_view_report">View Report</string>
+    <string name="title_activity_contact_us">Contact Us</string>
 
 </resources>
