--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="title_activity_view_report">View Report</string>
     <string name="title_activity_contact_us">Contact Us</string>
     <string name="title_activity_scan_qrcode_single">ScanQRCodeSingleActivity</string>
+    <string name="title_activity_manual_entry">ManualEntryActivity</string>
 
 </resources>
