--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="title_activity_contact_us">Contact Us</string>
     <string name="title_activity_scan_qrcode_single">ScanQRCodeSingleActivity</string>
     <string name="title_activity_manual_entry">ManualEntryActivity</string>
+    <string name="title_activity_scan_qrcode_batch">ScanQRCodeBatchActivity</string>
 
 </resources>
