--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,22 +10,22 @@
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_user">UserActivity</string>
+    <string name="title_activity_user">User Activity</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_main">Smart Scan</string>
-    <string name="title_activity_scan_qrcode">ScanQRCodeActivity</string>
-    <string name="title_activity_scan_card">ScanCardActivity</string>
-    <string name="title_activity_scan_voice">ScanVoiceActivity</string>
-    <string name="title_activity_scan_card_selection">ScanCardSelectionActivity</string>
-    <string name="title_activity_scan_card_batch">ScanCardBatch</string>
-    <string name="title_activity_scan_card_single">ScanCardSingle</string>
+    <string name="title_activity_scan_qrcode">Scan QRCode Activity</string>
+    <string name="title_activity_scan_card">Scan Card Activity</string>
+    <string name="title_activity_scan_voice">Scan Voice</string>
+    <string name="title_activity_scan_card_selection">Scan Card Selection</string>
+    <string name="title_activity_scan_card_batch">Scan Card Batch</string>
+    <string name="title_activity_scan_card_single">Scan Card Single</string>
     <string name="title_activity_functional_main">iPresence</string>
     <string name="title_activity_my_profile">My Profile</string>
     <string name="title_activity_about_ipresence">About IPresence</string>
     <string name="title_activity_view_report">View Report</string>
     <string name="title_activity_contact_us">Contact Us</string>
-    <string name="title_activity_scan_qrcode_single">ScanQRCodeSingleActivity</string>
-    <string name="title_activity_manual_entry">ManualEntryActivity</string>
-    <string name="title_activity_scan_qrcode_batch">ScanQRCodeBatchActivity</string>
+    <string name="title_activity_scan_qrcode_single">Scan QRCode Single</string>
+    <string name="title_activity_manual_entry">Manual Entry</string>
+    <string name="title_activity_scan_qrcode_batch">Scan QRCode Batch</string>
 
 </resources>
