--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="title_activity_manual_entry">Manual Entry</string>
     <string name="title_activity_scan_qrcode_batch">Scan QRCode Batch</string>
     <string name="title_activity_user_main">UserMainActivity</string>
+    <string name="title_activity_qrcode_generator">QRCodeGeneratorActivity</string>
 
 </resources>
