--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,9 @@
     <string name="title_activity_scan_qrcode_batch">Scan QRCode Batch</string>
     <string name="title_activity_user_main">UserMainActivity</string>
     <string name="title_activity_qrcode_generator">QRCodeGeneratorActivity</string>
+    <string name="title_activity_scan_voice_code">ScanVoiceCodeActivity</string>
+    <string name="title_activity_scan_voice_code_single">ScanVoiceCodeSingleActivity</string>
+    <string name="title_activity_scan_voice_code_batch">ScanVoiceCodeBatchActivity</string>
+    <string name="title_activity_view_user_report">ViewUserReportActivity</string>
 
 </resources>
